<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OutfitVault</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="edit">Edit</string>
    <string name="season">SEASON</string>
    <string name="sample_outfit_description">
        Year:
        \nOuter:
        \nInner:
        \nBottom:
        \nFootwear:
        \nSocks:
        \nHeadgear:
        \nBag:
        \nAccessories:
        \nEyewear:
        \nOther:
    </string>
    <string name="iv_outfit_content_description">Outfit Image</string>
    <string name="main_activity_fab_content_description">add outfit</string>
    <string name="create_outfit">Create Outfit</string>
    <string name="take_photo">Take Photo</string>
    <string name="delete_outfit">Delete outfit</string>
    <string name="delete_outfit_confirmation">Are you sure you want to permanently delete this outfit?</string>
    <string name="cancel">Cancel</string>
    <string name="successful_delete">Successfully deleted outfit</string>
    <string name="error_deleting_outfit">Error deleting outfit</string>
    <string name="charts">Charts</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="places">Places</string>
    <string name="outfits_per_season">OUTFITS PER SEASON</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="confirm_edit">Confirm Edit</string>
    <string name="suuccessful_update">Successfully updated</string>
    <string name="successfully_added">Successfully added</string>
    <string name="favorite_button">favorite button</string>
    <string name="rec_view_favorite_content_description">Display favorite status</string>
    <string name="edit_button">edit button</string>
    <string name="delete_button">delete button</string>
    <string name="chart_title">Outfits \nby Season</string>
</resources>