<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_charts"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/charts" />

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"
        />

    <item
        android:id="@+id/nav_places"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_place_marker_24"
        android:title="@string/places" />

</menu>