<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    tools:context=".OutfitEditActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_outfit_edit"
            android:layout_width="300dp"
            android:layout_height="450dp"
            app:srcCompat="@drawable/ic_launcher_background"
            android:contentDescription="@string/iv_outfit_content_description"
            android:padding="5dp"

            app:layout_constraintBottom_toTopOf="@+id/gl_hor_outfit_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hor_outfit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vert_left_outfit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_vert_right_outfit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <Spinner
            android:id="@+id/spn_season_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_take_photo_edit"
            app:layout_constraintEnd_toStartOf="@+id/btn_take_photo_edit"
            app:layout_constraintStart_toEndOf="@+id/btn_favorite_outfit_edit"
            app:layout_constraintTop_toTopOf="@+id/gl_hor_outfit_edit" />

        <Button
            android:id="@+id/btn_take_photo_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"

            app:layout_constraintEnd_toStartOf="@+id/gl_vert_right_outfit_edit"
            app:layout_constraintStart_toStartOf="@+id/gl_vert_right_outfit_edit"
            app:layout_constraintTop_toTopOf="@+id/gl_hor_outfit_edit" />

        <ScrollView
            android:id="@+id/sv_outfit_edit"
            android:layout_width="match_parent"
            android:layout_height="100dp"

            android:layout_margin="5dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favorite_outfit_edit">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_description_outfit_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:text="@string/sample_outfit_description"
                    android:autofillHints="@null"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="LabelFor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_favorite_outfit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"

            app:layout_constraintEnd_toStartOf="@+id/gl_vert_left_outfit_edit"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/gl_vert_left_outfit_edit"
            app:layout_constraintTop_toTopOf="@+id/gl_hor_outfit_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>